<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="20"
        android:background="@drawable/shape_red_white"
        android:textColor="@android:color/holo_red_dark"
        android:width="60dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:id="@+id/txtMainPontos"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pontos"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        android:id="@+id/lblMainPontos"
        android:maxLines="1"
        android:layout_marginTop="24dp"
        android:layout_alignLeft="@id/txtMainPontos"
        android:layout_alignStart="@id/txtMainPontos" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_below="@id/lblMainPontos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_conteudo"
        android:layout_marginRight="@dimen/margin_conteudo"
        android:layout_marginTop="@dimen/margin_top_conteudo"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_content"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titulo_pergunta"
            android:textStyle="bold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/txtMain" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/play"
            android:background="@drawable/shape_pergunta"
            android:textSize="16sp"
            android:id="@+id/btnMainJogar"
            android:layout_below="@id/txtMain"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/txt_avatar"
            android:background="@drawable/shape_pergunta"
            android:textSize="16sp"
            android:id="@+id/btnMainAvatar"
            android:layout_below="@id/btnMainJogar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/exercicio1_top_margin_alternativas" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/guarda_roupa"
            android:textSize="16sp"
            android:background="@drawable/shape_pergunta"
            android:id="@+id/btnMainGuardaRoupa"
            android:layout_below="@id/btnMainAvatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/exercicio1_top_margin_alternativas" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/ranking"
            android:background="@drawable/shape_pergunta"
            android:textSize="16sp"
            android:id="@+id/btnMainRanking"
            android:layout_below="@id/btnMainGuardaRoupa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/exercicio1_top_margin_alternativas" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/comprar"
            android:background="@drawable/shape_pergunta"
            android:textSize="16sp"
            android:id="@+id/btnMainComprarRoupa"
            android:layout_below="@id/btnMainRanking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/exercicio1_top_margin_alternativas" />

        <Button
            android:layout_width="@dimen/resposta1width"
            android:layout_height="@dimen/resposta1height"
            android:text="@string/exit"
            android:background="@drawable/shape_pergunta"
            android:textSize="16sp"
            android:id="@+id/btnExit"
            android:layout_below="@id/btnMainComprarRoupa"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/exercicio1_top_margin_alternativas" />

    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>