<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.eduardotanaka.knowdown.LoginActivity"
    android:background="@drawable/background"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_know"
                android:textSize="@dimen/login_name_size"
                android:textColor="@android:color/white"
                android:shadowColor="@color/black"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="15"
                android:id="@+id/txtSaber"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_down"
                android:textSize="@dimen/login_name_size"
                android:paddingBottom="20dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:shadowColor="@color/black"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="15"
                android:id="@+id/txtDown"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/margin_conteudo"
            android:layout_marginRight="@dimen/margin_conteudo"
            android:background="@drawable/shape_content"
            android:layout_below="@id/linearLayout"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginStart="@dimen/login_margin"
                android:layout_marginTop="@dimen/login_margin"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_hint"
                android:id="@+id/edtLoginUser"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginStart="@dimen/login_margin"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password_hint"
                android:id="@+id/edtLoginPassword"
                android:maxLines="1"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/play"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:textColor="@color/yellow"
                    android:background="@drawable/shape_timer"
                    android:id="@+id/btnLogin"
                    android:layout_marginRight="@dimen/login_margin"
                    android:layout_marginEnd="@dimen/login_margin"/>

                <Button
                    android:layout_width="130dp"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/new_user"
                    android:shadowColor="@color/black"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="5"
                    android:textColor="@color/yellow"
                    android:background="@drawable/shape_timer"
                    android:id="@+id/btnRegistre_se" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp">

            <ImageView
                android:contentDescription="@string/cd_img_trophy"
                android:id="@+id/imgLoginRanking"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/trophy"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="@dimen/activities_title_size"
                android:text="@string/ranking"
                android:id="@+id/btnRanking"
                android:background="@drawable/shape_red_white"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textColor="@color/yellow"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textColor="@color/yellow"
                android:text="@string/forgot_password"
                android:id="@+id/btnNovaSenha"
                android:background="@drawable/shape_timer"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/baseProgressBar2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical">
        <!-- progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>