<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.eduardotanaka.knowdown.AvatarActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_meu_avatar"
        android:textColor="@android:color/white"
        android:textSize="@dimen/layout_title_text_size"
        android:textAlignment="center"
        android:background="@drawable/shape_timer"
        android:layout_marginTop="@dimen/margin_conteudo"
        android:layout_marginLeft="@dimen/margin_conteudo"
        android:layout_marginStart="@dimen/margin_conteudo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10"
        android:background="@drawable/shape_red_white"
        android:textColor="@android:color/holo_red_dark"
        android:width="@dimen/score_width"
        android:textAlignment="center"
        android:textSize="@dimen/score_text_size"
        android:id="@+id/txtPontosAvatar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/score_margin"
        android:layout_marginEnd="@dimen/score_margin"
        android:layout_marginTop="@dimen/score_margin_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pontos"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textColor="@color/yellow"
        android:maxLines="1"
        android:textSize="@dimen/score_text_size"
        android:id="@+id/lblPontosAvatar"
        android:layout_marginTop="24dp"
        android:layout_alignLeft="@id/txtPontosAvatar"
        android:layout_alignStart="@id/txtPontosAvatar" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_height"
        android:layout_below="@+id/lblPontosAvatar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/margin_conteudo"
        android:layout_marginRight="@dimen/margin_conteudo"
        android:layout_marginTop="@dimen/margin_top_conteudo"
        android:layout_marginBottom="@dimen/content_margin_bottom"
        android:background="@drawable/shape_content"
        android:id="@+id/relativeLayoutAcerto">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblAcertos"
                    android:text=""
                    android:textColor="#fff"
                    android:width="40dp"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@drawable/shape_green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_acerto"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblErros"
                    android:text=""
                    android:textColor="#fff"
                    android:width="40dp"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@drawable/shape_red"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_erro"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:id="@+id/relativeLayoutAvatar">

            <ImageView
                android:contentDescription="@string/cd_img_back_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/avatar_background"/>

            <ImageView
                android:contentDescription="@string/cd_img_shirt"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginTop="91dp"
                android:elevation="2dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/avatar_camisa"/>

            <ImageView
                android:contentDescription="@string/cd_img_pants"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/avatar_calca"
                android:layout_marginTop="168dp" />

            <ImageView
                android:contentDescription="@string/cd_img_shoes"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:elevation="2dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/avatar_sapato"
                android:layout_alignBottom="@+id/imgAvatar0"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingStart="1dp"
                android:paddingEnd="1dp"/>

            <ImageView
                android:contentDescription="@string/cd_img_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imgAvatar0"
                android:elevation="1dp"/>
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/cd_img_avatars"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/avatares"
        android:layout_alignParentBottom="true"
        android:id="@+id/imgMontarAvatar"
        android:layout_marginLeft="@dimen/margin_conteudo"
        android:layout_marginStart="@dimen/margin_conteudo"
        android:clickable="true" />

    <TextView
        android:id="@+id/txtMontarAvatar"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/txt_montar_avatar"
        android:background="@drawable/shape_red_white"
        android:textColor="@color/yellow"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/imgMontarAvatar"
        android:layout_toEndOf="@id/imgMontarAvatar"
        android:textAlignment="center"
        android:padding="5dp"
        android:clickable="true"
        android:layout_marginBottom="15dp"/>
</RelativeLayout>
