<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEsqueciSenha"
        android:hint="@string/user_hint"
        android:inputType="textEmailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEsqueciSenhaCancelar"
            android:text="@string/btn_cancelar"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/yellow"
            android:background="@drawable/shape_timer" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEsqueciSenhaEnviar"
            android:text="@string/btn_confirm"
            android:shadowColor="#000"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:textColor="@color/yellow"
            android:background="@drawable/shape_timer"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
</LinearLayout>